Switched gridlines to inset box-shadow for cell borders to prevent skewed spacing

--- a/src/styles/_cell.scss
+++ b/src/styles/_cell.scss
@@ -2,7 +2,7 @@
 
 .cell {
   background-color: $dead-cell;
-  border: $cell-border;
+  box-shadow: inset 0 0 1px $gridlines;
   height: $cell-side;
   width: $cell-side;
 }
